--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -4,93 +4,33 @@
     ],
     "editor.fontFamily": "'Fira Code'",
     "editor.fontLigatures": true,
-    "editor.formatOnSave": false,
-    "gitlens.hovers.currentLine.over": "line",
-    "gitlens.heatmap.toggleMode": "window",
+    "editor.formatOnSave": true,
     "files.autoSave": "afterDelay",
     "explorer.autoReveal": false,
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
     "files.insertFinalNewline": true,
     "telemetry.enableTelemetry": false,
-    "workbench.colorTheme": "Super One Dark",
+    "workbench.colorTheme": "Material Theme Darker",
     "workbench.iconTheme": "material-icon-theme",
-    "terminal.integrated.shell.linux": "/bin/zsh",
+    "terminal.integrated.shell.linux": "/bin/bash",
     "explorer.confirmDragAndDrop": false,
     "explorer.confirmDelete": false,
     "window.zoomLevel": 0,
     "window.titleBarStyle": "custom",
-    "peacock.favoriteColors": [
-        {
-            "name": "Angular Red",
-            "value": "#b52e31"
-        },
-        {
-            "name": "Auth0 Orange",
-            "value": "#eb5424"
-        },
-        {
-            "name": "Azure Blue",
-            "value": "#007fff"
-        },
-        {
-            "name": "C# Purple",
-            "value": "#68217A"
-        },
-        {
-            "name": "Gatsby Purple",
-            "value": "#639"
-        },
-        {
-            "name": "Go Cyan",
-            "value": "#5dc9e2"
-        },
-        {
-            "name": "Java Blue-Gray",
-            "value": "#557c9b"
-        },
-        {
-            "name": "JavaScript Yellow",
-            "value": "#f9e64f"
-        },
-        {
-            "name": "Mandalorian Blue",
-            "value": "#1857a4"
-        },
-        {
-            "name": "Node Green",
-            "value": "#215732"
-        },
-        {
-            "name": "React Blue",
-            "value": "#00b3e6"
-        },
-        {
-            "name": "Something Different",
-            "value": "#832561"
-        },
-        {
-            "name": "Vue Green",
-            "value": "#42b883"
-        }
-    ],
-    "enableTelemetry": false,
-    "clang-tidy.checks": [
-        "readability*"
-    ],
-    "clang-tidy.executable": "clang-tidy-wrapper",
-    "clang-tidy.compilerArgsBefore": "-isystem/home/superjax/Code/globalai/build/eigen_ext-prefix/src/eigen_ext",
     "terminal.integrated.scrollback": 10000,
     "editor.minimap.enabled": false,
     "breadcrumbs.enabled": true,
     "python.pythonPath": "/usr/bin/python3",
-    "python.envFile": "${workspaceFolder}/python.env",
+    "python.envFile": "${workspaceFolder}/.vscode/python.env",
     "editor.renderControlCharacters": false,
     "workbench.sideBar.location": "left",
     "files.associations": {
         "*.make": "makefile",
-        "*.hdr": "yaml"
+        "*.hdr": "json"
     },
     "debug.onTaskErrors": "showErrors",
-    "extensions.ignoreRecommendations": false
+    "extensions.ignoreRecommendations": false,
+    "editor.formatOnPaste": true,
+    "editor.snippetSuggestions": "top"
 }
