--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -12,7 +12,6 @@
     "files.insertFinalNewline": true,
     "telemetry.enableTelemetry": false,
     "workbench.colorTheme": "Material Theme Darker",
-    "workbench.iconTheme": "material-icon-theme",
     "terminal.integrated.shell.linux": "/bin/bash",
     "explorer.confirmDragAndDrop": false,
     "explorer.confirmDelete": false,
@@ -21,7 +20,6 @@
     "terminal.integrated.scrollback": 10000,
     "editor.minimap.enabled": false,
     "breadcrumbs.enabled": true,
-    "python.pythonPath": "/usr/bin/python3",
     "python.envFile": "${workspaceFolder}/.vscode/python.env",
     "editor.renderControlCharacters": false,
     "workbench.sideBar.location": "left",
@@ -32,5 +30,12 @@
     "debug.onTaskErrors": "showErrors",
     "extensions.ignoreRecommendations": false,
     "editor.formatOnPaste": true,
-    "editor.snippetSuggestions": "top"
+    "editor.snippetSuggestions": "top",
+    "python.defaultInterpreterPath": "/usr/bin/python3",
+    "python.linting.enabled": true,
+    "python.linting.lintOnSave": true,
+    "python.linting.pylintPath": "pylint",
+    "python.formatting.provider": "yapf",
+    "python.linting.pylintEnabled": true,
+    "python.dataScience.askForKernelRestart": false,
 }
