--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -2,14 +2,13 @@
     "editor.rulers": [
         101
     ],
-    "editor.fontFamily": "'Fira Code'",
-    "editor.fontLigatures": true,
-    "editor.formatOnSave": true,
     "files.autoSave": "afterDelay",
     "explorer.autoReveal": false,
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
     "files.insertFinalNewline": true,
+    "editor.fontFamily": "Fira Code",
+    "editor.fontLigatures": true,
     "telemetry.enableTelemetry": false,
     "workbench.colorTheme": "Material Theme Darker",
     "terminal.integrated.shell.linux": "/bin/bash",
@@ -29,13 +28,47 @@
     },
     "debug.onTaskErrors": "showErrors",
     "extensions.ignoreRecommendations": false,
+    "editor.formatOnSave": true,
     "editor.formatOnPaste": true,
     "editor.snippetSuggestions": "top",
-    "python.defaultInterpreterPath": "/usr/bin/python3",
     "python.linting.enabled": true,
     "python.linting.lintOnSave": true,
     "python.linting.pylintPath": "pylint",
     "python.formatting.provider": "yapf",
     "python.linting.pylintEnabled": true,
-    "python.dataScience.askForKernelRestart": false,
+    "workbench.iconTheme": "material-icon-theme",
+    "workbench.colorCustomizations": {
+        "activityBarBadge.background": "#616161",
+        "activityBar.activeBorder": "#616161",
+        "list.activeSelectionForeground": "#616161",
+        "list.inactiveSelectionForeground": "#616161",
+        "list.highlightForeground": "#616161",
+        "scrollbarSlider.activeBackground": "#61616150",
+        "editorSuggestWidget.highlightForeground": "#616161",
+        "textLink.foreground": "#616161",
+        "progressBar.background": "#616161",
+        "pickerGroup.foreground": "#616161",
+        "tab.activeBorder": "#616161",
+        "notificationLink.foreground": "#616161",
+        "editorWidget.resizeBorder": "#616161",
+        "editorWidget.border": "#616161",
+        "settings.modifiedItemIndicator": "#616161",
+        "settings.headerForeground": "#616161",
+        "panelTitle.activeBorder": "#616161",
+        "breadcrumb.activeSelectionForeground": "#616161",
+        "menu.selectionForeground": "#616161",
+        "menubar.selectionForeground": "#616161",
+        "editor.findMatchBorder": "#616161",
+        "selection.background": "#61616140",
+        "statusBarItem.remoteBackground": "#616161"
+    },
+    "materialTheme.accent": "Graphite",
+    "bazel.enableCodeLens": true,
+    "[cpp]": {
+        "editor.defaultFormatter": "xaver.clang-format"
+    },
+    "diffEditor.ignoreTrimWhitespace": false,
+    "jupyter.askForKernelRestart": false,
+    "jupyter.alwaysTrustNotebooks": true,
+    "python.languageServer": "Pylance",
 }
